Fixed scrollbar for long service names.

--- a/jujugui/static/gui/src/app/components/added-services-list/_added-services-list.scss
+++ b/jujugui/static/gui/src/app/components/added-services-list/_added-services-list.scss
@@ -55,7 +55,7 @@
         top: 2px;
         overflow: hidden;
         display: inline-block;
-        max-width: 165px;
+        max-width: 155px;
         text-overflow: ellipsis;
         white-space: nowrap;
         vertical-align: text-bottom;
